--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-pytrends
+git+https://github.com/rodrigosestari/pytrends.git#egg=pytrends
+tweepy
+praw
+pytube
+google-api-python-client
+git+https://github.com/rodrigosestari/instagram-explore.git#egg=instagram-explore
+bs4
+
+git+https://github.com/mobolic/facebook-sdk.git#egg=facebook-sdk
+#facebook-sdk
+
+
